Project didaune_locations {
  database_type: "PostgreSQL"
  Note: "Generic location schema for cafes, restaurants, hotels, and similar places."
}

Table users {
  id uuid [pk, not null]
  email varchar(255) [unique, not null]
  password_hash varchar(255)
  full_name varchar(255)
  username varchar(100) [unique]
  phone varchar(50)
  avatar_url text
  bio text
  role varchar(50) [not null, default: 'user', note: "user, admin, owner"]
  auth_provider varchar(50) [default: 'local', note: "local, google, facebook"]
  provider_user_id varchar(255)
  membership_tier varchar(50)
  points int [default: 0]
  is_active boolean [not null, default: true]
  email_verified_at timestamptz
  last_login_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Indexes {
    (role)
    (auth_provider)
    (provider_user_id)
  }
}

Table locations {
  id uuid [pk, not null]
  source varchar(50) [not null, note: "google_maps, internal, api, etc."]
  source_place_id varchar(255) [unique, note: "External place_id if available"]
  source_cid varchar(255)
  source_data_id varchar(255)
  source_kgmid varchar(255)

  name varchar(255) [not null]
  slug varchar(255) [unique, not null]
  description text

  primary_type varchar(100) [not null, note: "cafe, restaurant, hotel, etc."]
  main_category varchar(255)
  status varchar(100)

  rating decimal(3,2)
  reviews_count int [default: 0]
  price_level varchar(100)
  price_range varchar(100)

  website varchar(500)
  phone varchar(50)
  phone_international varchar(50)
  google_maps_link text
  reviews_link text
  menu_link text
  menu_source varchar(255)

  featured_image text
  image_count int [default: 0]

  full_address text
  street varchar(255)
  ward varchar(255)
  district varchar(255)
  city varchar(255)
  state_or_province varchar(255)
  postal_code varchar(50)
  country_code varchar(10)
  plus_code varchar(50)

  latitude decimal(10,7)
  longitude decimal(10,7)
  timezone varchar(100)

  owner_id varchar(255)
  owner_name varchar(255)
  owner_link text

  can_claim boolean [default: false]
  is_spending_on_ads boolean [default: false]
  is_temporarily_closed boolean [default: false]
  is_permanently_closed boolean [default: false]
  is_rental boolean [default: false]

  raw_payload jsonb [note: "Optional original source payload for debugging or re-processing"]

  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Indexes {
    (primary_type)
    (main_category)
    (city)
    (district)
    (ward)
    (rating)
    (reviews_count)
    (latitude, longitude)
  }
}

Table location_categories {
  id uuid [pk, not null]
  location_id uuid [not null, ref: > locations.id]
  category_name varchar(255) [not null]
  is_primary boolean [default: false]

  Indexes {
    (location_id)
    (category_name)
    (location_id, category_name) [unique]
  }
}

Table location_attributes {
  id uuid [pk, not null]
  location_id uuid [not null, ref: > locations.id]
  group_key varchar(100) [not null, note: "service_options, amenities, parking, etc."]
  group_name varchar(255)
  attribute_key varchar(100)
  attribute_name varchar(255) [not null]
  is_enabled boolean [not null, default: true]

  Indexes {
    (location_id)
    (group_key)
    (attribute_name)
  }
}

Table location_hours {
  id uuid [pk, not null]
  location_id uuid [not null, ref: > locations.id]
  day_of_week smallint [not null, note: "1-7, or map externally as needed"]
  day_label varchar(50) [not null]
  open_time time
  close_time time
  segment_order smallint [default: 1, note: "Supports split shifts"]
  is_closed boolean [default: false]

  Indexes {
    (location_id)
    (location_id, day_of_week, segment_order) [unique]
  }
}

Table location_images {
  id uuid [pk, not null]
  location_id uuid [not null, ref: > locations.id]
  image_url text [not null]
  image_type varchar(50) [note: "featured, gallery, owner_post, review_photo"]
  source varchar(100)
  source_ref_id varchar(255)
  width int
  height int
  published_at timestamptz
  sort_order int [default: 0]

  Indexes {
    (location_id)
    (image_type)
  }
}

Table location_reviews {
  id uuid [pk, not null]
  location_id uuid [not null, ref: > locations.id]
  user_id uuid [ref: > users.id]
  review_source varchar(20) [not null, note: "external or internal"]
  external_review_id varchar(255)
  reviewer_name varchar(255)
  reviewer_external_id varchar(255)
  reviewer_profile text
  reviewer_avatar_url text
  rating decimal(2,1)
  review_text text
  original_language varchar(20)
  translated_text text
  translated_language varchar(20)
  review_origin varchar(50) [note: "google, internal, etc."]
  published_at timestamptz
  owner_response_text text
  owner_response_at timestamptz
  total_reviews_by_reviewer int
  total_photos_by_reviewer int
  is_local_guide boolean [default: false]
  is_visible boolean [not null, default: true]
  is_verified boolean [not null, default: false, note: "Useful for internal reviews from verified visits/accounts"]
  raw_payload jsonb
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Indexes {
    (location_id)
    (user_id)
    (review_source)
    (external_review_id)
    (published_at)
    (location_id, external_review_id) [unique]
  }
}

Table user_favorites {
  id uuid [pk, not null]
  user_id uuid [not null, ref: > users.id]
  location_id uuid [not null, ref: > locations.id]
  folder_name varchar(100)
  note text
  created_at timestamptz [not null]

  Indexes {
    (user_id)
    (location_id)
    (user_id, location_id) [unique]
  }
}

Table user_sessions {
  id uuid [pk, not null]
  user_id uuid [not null, ref: > users.id]
  refresh_token_hash varchar(255) [not null]
  user_agent text
  ip_address varchar(100)
  expires_at timestamptz [not null]
  revoked_at timestamptz
  created_at timestamptz [not null]

  Indexes {
    (user_id)
    (expires_at)
  }
}

Table location_review_images {
  id uuid [pk, not null]
  review_id uuid [not null, ref: > location_reviews.id]
  image_url text [not null]
  caption text
  width int
  height int

  Indexes {
    (review_id)
  }
}

Table location_owner_posts {
  id uuid [pk, not null]
  location_id uuid [not null, ref: > locations.id]
  external_post_id varchar(255)
  post_text text
  link text
  call_to_action varchar(255)
  published_at timestamptz
  raw_payload jsonb

  Indexes {
    (location_id)
    (external_post_id)
    (published_at)
  }
}

Table location_competitors {
  id uuid [pk, not null]
  location_id uuid [not null, ref: > locations.id]
  name varchar(255) [not null]
  main_category varchar(255)
  rating decimal(3,2)
  reviews_count int [default: 0]
  suggested_link text
  latitude decimal(10,7)
  longitude decimal(10,7)
  raw_payload jsonb

  Indexes {
    (location_id)
    (name)
  }
}

Table location_external_links {
  id uuid [pk, not null]
  location_id uuid [not null, ref: > locations.id]
  link_type varchar(100) [not null, note: "reservation, order_online, menu, website, etc."]
  title varchar(255)
  provider varchar(255)
  url text [not null]

  Indexes {
    (location_id)
    (link_type)
  }
}
